tests/snapshots/run_wpt_conformance__onnx_reduceMin_float32_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float32 3D tensor options.axes",
    "onnx",
    "PASS",
)
